# ai-config-analyzer

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in
ai-config-analyzer-974b89db/: LICENSE  README.md  pyproject.toml
ai-config-analyzer-974b89db/.github/workflows/: ci.yml
ai-config-analyzer-974b89db/examples/: clean.toml
ai-config-analyzer-974b89db/src/ai_config_analyzer/: __init__.py  findings.py
ai-config-analyzer-974b89db/src/ai_config_analyzer/rules/: __init__.py  security.py
ai-config-analyzer-974b89db/tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py
examples/: insecure.yaml
src/ai_config_analyzer/: analyzer.py  api.py  cli.py  parser.py
src/ai_config_analyzer/rules/: _walk.py  secrets.py  structure.py
tests/: test_findings.py  test_parser.py
