[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-config-analyzer"
version = "0.1.0"
description = "Analyze configuration files (YAML/JSON/TOML/INI/ENV) for security and structural issues."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Humberto Jonaro" }]
keywords = ["config", "analyzer", "security", "yaml", "json", "toml", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "build>=1.0",
    "ruff>=0.4",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
ai-config-analyzer = "ai_config_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/humbertojonaro-bit/ai-config-analyzer"
Source = "https://github.com/humbertojonaro-bit/ai-config-analyzer"
Issues = "https://github.com/humbertojonaro-bit/ai-config-analyzer/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_config_analyzer*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
